#1269 -Svg images alignment fix

--- a/R4/Files/Templates/Designs/R4/Assets/_src/scss/4-utilities/_svg-icon.scss
+++ b/R4/Files/Templates/Designs/R4/Assets/_src/scss/4-utilities/_svg-icon.scss
@@ -1,4 +1,5 @@
 .svg-icon {
+	display: flex;
 
 	svg {
 		display: inline-block;
